src/index.scss
@import "../node_modules/bootstrap/scss/functions";

// NERACOOS COLORS
$neracoos-blue: #083d52;
$metallic-seaweed: #178596;
$coastal-meadow: #2ab78f;
$buoy-yellow: #ffcb22;
$what-orange: #ffae6d;

// DIG COLORS
$blue: $neracoos-blue;
$black: #212529;
$white: #ffffff;
$orange: $what-orange;
$green: $coastal-meadow;
$seaweed: $metallic-seaweed;
$yellow: $buoy-yellow;
$bootstrap-red: #dc3545;

// BS MAPPING
$primary: $blue;
$secondary: $black;
$info: $seaweed;
$success: $green;
$warning: $yellow;
$danger: $bootstrap-red;

// THEME
$theme-colors: (
  "orange": $orange,
  "primary": $primary,
  "secondary": $secondary,
  "info": $info,
  "success": $success,
  "warning": $warning,
  "danger": $danger,
);

$grid-gutter-width: 1.25rem;
$spacers: (
  0: 0,
  1: 0.25rem,
  2: 0.5rem,
  3: 0.75rem,
  4: 1rem,
  5: 1.25rem,
  6: 1.5rem,
  7: 1.75rem,
  8: 2rem,
  9: 2.25rem,
  10: 2.5rem,
);

@import "../node_modules/bootstrap/scss/bootstrap.scss";
// @import "~bootstrap/scss/variables";
// @import "~bootstrap/scss/mixins";

// @import "~bootstrap/scss/reboot";
// @import "~bootstrap/scss/root";
// @import "~bootstrap/scss/type";
// @import "~bootstrap/scss/images";
// @import "~bootstrap/scss/containers";
// @import "~bootstrap/scss/grid";

// ======= PLATFORM/WATER LEVEL MAP START =======
.platform-map {
  min-height: 40vh;

  @include media-breakpoint-up(md) {
    min-height: 590px;
    max-height: 80vh;
  }
}

.water-level-map {
  min-height: 40vh;

  @include media-breakpoint-up(md) {
    max-height: 80vh;
  }
}

// ======= PLATFORM/WATER LEVEL MAP END =======

.superlative-header,
footer {
  background-color: rgba($secondary, 0.05);
}

.App .alert-primary {
  color: $primary;
}

.App .navbar-brand .nav-link,
.App .nav-tabs .nav-item {
  color: $primary;
}

nav.navbar {
  background-color: $primary;

  .dropdown-menu {
    background-color: white;
  }
  .navbar-brand > img {
    height: 30px;
  }

  a.nav-link {
    color: rgba(255, 255, 255, 0.55);

    &.active {
      color: white;
    }

    &.dropdown-item {
      color: $primary;
    }

    &.dropdown-toggle.show {
      color: rgba(255, 255, 255, 0.739);
    }
  }
}

.navbar-dark .navbar-nav .dropdown-menu .nav-link:hover {
  color: black;
}

.condition-tooltip > div > div {
  background-color: $primary;
}

.condition-tooltip > div.tooltip > span.arrow::before {
  border-top-color: $primary;
  border-bottom-color: $primary;
}

.btn-primary {
  @include button-variant($primary, $primary, $active-background: $primary);
}

.tooltip-inner a {
  color: $coastal-meadow;
}

.map .ol-zoom {
  top: 10px;
  left: auto;
  right: 10px;
}

.legend-item {
  display: flex;
  align-items: center;
  font-size: 12px;
  position: relative;
}

.pred-legend-item {
  position: relative;
  display: flex;
  align-items: center;
  font-size: 12px;
  height: 15px;
}

.obs-legend-color {
  border-radius: 5px;
  width: 10px;
  height: 10px;
  margin-right: 5px;
}

.pred-legend-color {
  width: 10px;
  height: 10px;
  margin-right: 5px;
}

.legend-container {
  background-color: #ffffff;
  padding: 10px;
  display: flex;
  width: 130px;
  margin-top: -5px;
}

.legend-dropdown {
  position: absolute;
  left: 10px;
  top: 10px;
  z-index: 1;
  margin-right: 10px;
  display: flex;
  max-width: 120px;
}

.legend-dropdown.active {
  background-color: #ffffff00;
}

.dropdown-menu.show.legend-dropdown-menu {
  background-color: #ffffff00;
  border: none;
}

.dropdown-item.legend-dropdown-item {
  padding: 0;
  background-color: #ffffff00;
  width: 120px;
}

.map-popup-custom {
  z-index: 10;
  background-color: #00000095;
  color: #ffffff;
  font-size: small;
  padding: 5px;
  border-radius: 5px;
  // cursor:
}

.chart-display {
  width: 60vw;
}

.datum-radio-group {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 20px;
  row-gap: 5px;
}

.timeframe-label {
  margin-right: 20px;
  display: flex;
  align-items: center;
}

.timeframe-card {
  width: fit-content;
  padding: 8px;
  margin-top: 5px;
  vertical-align: middle;
  margin-bottom: 20px;
}

.observation-title-container {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  align-items: center;
}

.obervation-title {
  grid-column: 2;
  justify-self: center;
}

.observation-timeframe-selector {
  grid-column: 3;
  justify-self: end;
}

@media (max-width: 1300px) {
  .timeframe-card {
    margin-left: 20px;
  }
}

@media (max-width: 1040px) {
  .chart-display {
    width: 100%;
  }
  .observation-title-container {
    grid-template-columns: 1fr;
    row-gap: 10px;
  }
  .obervation-title {
    grid-column: 1;
  }
  .observation-timeframe-selector {
    justify-self: center;
    grid-column: 1;
  }
  .timeframe-card {
    margin: 0;
  }
}

@media (max-width: 500px) {
  .timeframe-card .main {
    width: 95%;
  }
  .timeframe-label {
    flex-direction: column;
    margin: 0;
  }
  #revert-default-date {
    margin-left: -20px;
  }
}

